--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "contentful": "^11.2.1",
+    "launchdarkly-react-client-sdk": "^3.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
